Update transalastions on profile, about and help modules

--- a/src/assets/i18n/id.json
+++ b/src/assets/i18n/id.json
@@ -1,301 +1,27 @@
 {
-  "innovation in every dimension": "Inovasi di setiap dimensi",
-  "establishing connection to server": "Membangun koneksi ke server",
-  "aggregate metadata": "Metadata agregat",
-  "Event and tracker metadata": "Metadata acara & pelacak",
-  "report metadata": "Laporkan metadata",
-  "enter server address": "Masukkan alamat server",
-  "enter username": "Masukkan nama pengguna",
-  "enter password": "Masukkan kata kunci",
-  "login": "Masuk",
-  "powered by": "Dipersembahkan oleh",
-  "offline instances": "Contoh offline",
-  "or": "atau",
-  "apps": "Aplikasi",
-  "account": "Rekening",
-  "about": "Tentang",
-  "synced": "Disinkronkan",
-  "not synced": "Tidak disinkronkan",
-  "profile": "Profil",
-  "help": "Membantu",
-  "logout": "Keluar",
-  "settings": "Pengaturan",
-  "app settings": "Pengaturan aplikasi",
-  "current language": "Bahasa saat ini",
-  "synchronization": "Sinkronisasi",
-  "auto sync": "Sinkronisasi otomatis",
-  "minutes": "Menit",
-  "hours": "Jam",
-  "form label": "Label formulir",
-  "display name": "Nama tampilan",
-  "form name": "Nama formulir",
-  "form layout": "Form Layout",
-  "list layout": "Daftar tata letak",
-  "table layout": "Tata letak meja",
-  "data element per page": "Elemen data per halaman (maks.",
-  "dashboard": "Dasbor",
-  "there no dashboard found": "Tidak ada dasbor yang ditemukan",
-  "search dashboard by name": "Cari dasbor menurut nama",
-  "dashboard list": "Daftar dasbor",
-  "loading dashboard": "Menemukan dashboard",
-  "loading visualization": "Menemukan data visualisasi",
-  "there no dashboard item found": "Tidak ada item dasbor yang ditemukan",
-  "tracker capture": "Tracker Capture",
-  "sync": "Sinkronkan",
-  "upload data via sms": "Upload data via sms",
-  "upload data via internet": "Upload data via internet",
-  "import summaries": "Ringkasan impor",
-  "aggregate data": "Data agregat",
-  "tracked entity instances": "Contoh entitas yang dilacak",
-  "tracked entity enrollments": "Pendaftaran entitas yang dilacak",
-  "events for tracker": "Acara untuk pelacak",
-  "success": "Keberhasilan",
-  "failed": "Gagal",
-  "import conflicts errors": "Mengimpor konflik / kesalahan",
-  "download metadata": "Download metadata",
-  "download data": "Download data",
-  "clear local data": "Hapus data lokal",
-  "clear local metadata": "Hapus metadata lokal",
-  "data values": "Nilai data",
-  "events": "Acara",
-  "data entry": "Entri data",
-  "touch to select organisation unit": "Sentuh untuk memilih Unit organisasi",
-  "touch to select entry form": "Sentuh untuk memilih formulir entri",
-  "touch to select period": "Sentuh untuk memilih periode",
-  "data entry form selection": "Pemilihan Formulir Data Entry",
-  "data dimension selection": "Pemilihan Dimensi Data",
-  "touch to select option": "Sentuh untuk memilih pilihan",
-  "period selection": "Pemilihan periode",
-  "previous": "Sebelumnya",
-  "next": "Berikutnya",
-  "there is no period to select": "Tidak ada waktu untuk memilih",
-  "organisation unit selection": "Pemilihan unit organisasi",
-  "organisation unit": "Unit Organisasi",
-  "form": "Bentuk",
-  "period": "Periode",
-  "enter data": "Masukkan data",
-  "entry form": "Formulir pendaftaran",
-  "available indicators": "Indikator yang tersedia",
-  "complete": "Lengkap",
-  "undo complete": "Urungkan Lengkap",
-  "completed by": "Diselesaikan oleh",
-  "on": "di",
-  "please wait": "Mohon tunggu",
-  "data entry form sections": "Bagian formulir entri data",
-  "completeness information": "Kelengkapan informasi",
-  "full name": "Nama lengkap",
-  "username": "Nama pengguna",
-  "e mail": "E-mail",
-  "phone number": "Nomor telepon",
-  "event capture": "Penangkapan Peristiwa",
-  "touch to select program": "Sentuh untuk memilih program",
-  "columns": "Kolom",
-  "add": "Menambahkan",
-  "event register": "Daftar kejadian",
-  "visible header": "Terlihat Header",
-  "save": "Menyimpan",
-  "select all": "Pilih Semua",
-  "deselect all": "Hapus semua",
-  "program": "Program",
-  "program selection": "Pemilihan program",
-  "tracked entity dashboard": "Dashboard Entitas dilacak",
-  "Registration": "Pendaftaran",
-  "enrolling organisation unit": "Mendaftar unit organisasi",
-  "enrolling program": "Mendaftar Program",
-  "list of widgets": "Daftar widget",
-  "report": "Laporan",
-  "data set report": "Laporan set data",
-  "standard report": "Laporan standar",
-  "report name": "Nama laporan",
-  "report view": "Tampilan laporan",
-  "generate report": "Buat Laporan",
-  "help search": "Bantuan pencarian",
-  "search help by title": "Cari bantuan berdasarkan judul",
-  "system info": "Sistem Informasi",
-  "assigned organisation units": "Unit organisasi yang ditunjuk",
-  "user information": "Informasi pengguna",
-  "assigned roles": "Peran yang ditugaskan",
-  "assigned program": "Program yang ditugaskan",
-  "assigned form": "Bentuk yang ditugaskan",
-  "aggregate status": "Status agregat",
-  "event status": "Status acara",
-  "event for tracker status": "Acara untuk status pelacak",
-  "enrollments": "Pendaftaran",
-  "preparing table": "Mempersiapkan meja",
-  "loading current user information": "Memuat informasi pengguna saat ini",
-  "loading settings": "Memuat pengaturan",
-  "loading help contents": "Memuat isi bantuan",
-  "loading": "Memuat ...",
-  "loading profile information": "Memuat informasi profil",
-  "loading user information": "Memuat informasi pengguna",
-  "loading entry form information": "Memuat informasi formulir masuk",
-  "loading available local instances": "Memuat contoh lokal yang tersedia",
-  "loading indicators": "Memuat indikator",
-  "prepare entry form": "Siapkan form masuk",
-  "loading data from the server": "Memuat data dari server",
-  "saving data from server": "Menyimpan data dari server",
-  "loading current user authorities": "Memuat otoritas pengguna saat ini",
-  "preparing local storage": "Mempersiapkan penyimpanan lokal",
-  "loading assigned organisation units":
-    "Memuat unit organisasi yang ditugaskan",
-  "assigned organisation units have been loaded":
-    "Unit organisasi yang ditugaskan telah dimuat",
-  "assigned organisation units have been saved":
-    "Unit organisasi yang ditugaskan telah disimpan",
-  "saving assigned organisation units":
-    "Menyimpan unit organisasi yang ditugaskan",
-  "loading entry forms": "Memuat formulir entri",
-  "entry forms have been loaded": "Formulir masuk telah dimuat",
-  "saving entry forms": "Menyimpan formulir pendaftaran",
-  "entry form have been saved": "Formulir pendaftaran telah disimpan",
-  "loading entry form sections": "Memuat bagian formulir entri",
-  "entry form sections have been loaded": "Bagian formulir masuk telah dimuat",
-  "saving entry form sections": "Menyimpan bagian formulir entri",
-  "entry form sections have been saved": "Bagian formulir entri telah disimpan",
-  "loading entry form fields": "Memuat kolom formulir masuk",
-  "entry form fields have been loaded": "Bidang formulir entri telah dimuat",
-  "saving entry form fields": "Menyimpan kolom formulir masuk",
-  "entry form fields have been saved": "Bidang formulir entri telah disimpan",
-  "loading programs": "Memuat program",
-  "loading sms commands": "Memuat perintah SMS",
-  "sms commands have been loaded": "Perintah SMS telah dimuat",
-  "saving sms commands": "Menyimpan perintah SMS",
-  "sms commands have been saved": "Perintah SMS telah disimpan",
-  "programs have been loaded": "Program telah dimuat",
-  "saving programs": "Menyimpan program",
-  "programs have been saved": "Program telah disimpan",
-  "loading program stage section": "Memuat bagian tahap program",
-  "program stage section have been loaded": "Bagian tahap program telah dimuat",
-  "saving program stage section": "Menyimpan bagian tahap program",
-  "program stage section have been saved":
-    "Bagian tahap program telah disimpan",
-  "indicators have been loaded": "Indikator telah dimuat",
-  "saving sms indicators": "Indikator tabungan",
-  "indicators have been saved": "Indikator telah disimpan",
-  "reports have been loaded": "Laporan telah dimuat",
-  "saving reports": "Menyimpan laporan",
-  "reports have been saved": "Laporan telah disimpan",
-  "loading constants": "Memuat konstanta",
-  "constants have been loaded": "Konstanta telah dimuat",
-  "saving constants": "Menyimpan konstanta",
-  "constants have been saved": "Konstanta telah diselamatkan",
-  "loading report metadata": "Memuat metadata laporan",
-  "loading available local data": "Memuat data lokal yang tersedia",
-  "loading entry form completeness information":
-    "Memuat informasi kelengkapan bentuk entri",
-  "loading app information": "Memuat informasi aplikasi",
-  "loading system information": "Memuat informasi sistem",
-  "loading data values storage status": "Memuat data nilai status penyimpanan",
-  "loading events storage status": "Memuat status penyimpanan acara",
-  "loading enrollments storage status": "Memuat status penyimpanan pendaftaran",
-  "loading assigned programs": "Memuat program yang ditugaskan",
-  "loading data set report information": "Memuat data setel informasi laporan",
-  "prepare data set report": "Menyiapkan laporan set data",
-  "no data to display": "tidak ada data untuk ditampilkan",
-  "there is no option to select": "Tidak ada pilihan untuk memilih",
-  "there is no data entry form to select":
-    "Tidak ada form entri data untuk dipilih",
-  "there is nothing to select": "Tidak ada yang bisa dipilih",
-  "there no data at the moment": "Tidak ada data saat ini",
-  "there is no program to select": "Tidak ada program yang bisa dipilih",
-  "there is no report to select": "Tidak ada laporan untuk dipilih",
-  "there is no widget to select": "Tidak ada widget untuk dipilih",
-  "loading reports": "Memuat laporan",
-  "downloading reports from server": "Mengunduh laporan dari server",
-  "prepare local storage for updates":
-    "Siapkan penyimpanan lokal untuk pembaruan",
-  "saving reports from server": "Menyimpan laporan dari server",
-  "you are online": "Kamu sedang online",
-  "you are offline": "Anda sedang offline",
-  "fail to load user information": "Gagal memuat informasi pengguna",
-  "fail to load system information": "Gagal memuat informasi sistem",
-  "fail to load app information": "Gagal memuat informasi aplikasi",
-  "fail to load data values storage status":
-    "Gagal memuat data nilai status penyimpanan",
-  "fail to load enrollments storage status":
-    "Gagal memuat status penyimpanan pendaftaran",
-  "fail to load entry form": "Gagal memuat formulir entri",
-  "there are no entry form to select": "Tidak ada form masuk untuk dipilih",
-  "please select entry form first": "Silahkan pilih form entry terlebih dahulu",
-  "fail to load entry form information":
-    "Gagal memuat informasi formulir formulir",
-  "fail to save data from the server": "Gagal menyimpan data dari server",
-  "fail to load data from the server": "Gagal memuat data dari server",
-  "fail to prepare entry form": "Gagal mempersiapkan form masuk",
-  "fail to load available local data": "Gagal memuat data lokal yang tersedia",
-  "fail to load entry form completeness information":
-    "Gagal memuat informasi kelengkapan bentuk entri",
-  "there are no indicators to view": "Tidak ada indikator untuk dilihat",
-  "fail to un complete entry form": "gagal untuk tidak lengkap formulir masuk",
-  "fail to complete entry form": "Gagal mengisi formulir masuk",
-  "fail to load assigned programs": "Gagal memuat program yang ditugaskan",
-  "there are no program to select": "Tidak ada program yang bisa dipilih",
-  "loading program stages": "Memuat tahapan program",
-  "fail to load program stages": "Gagal memuat tahapan program",
-  "fail to prepare table for display": "Gagal menyiapkan meja untuk display",
-  "loading data from local storage": "Memuat data dari penyimpanan lokal",
-  "fail to set translation": "Gagal mengatur terjemahan",
-  "fail to prepare local storage": "Gagal menyiapkan penyimpanan lokal",
-  "fail to load user authorities": "Gagal memuat otoritas pengguna",
-  "fail to save current user information":
-    "Gagal menyimpan informasi pengguna saat ini",
-  "please check server address": "Silakan periksa alamat server",
-  "you have enter wrong username or password or server address":
-    "Anda telah memasukkan salah username atau password atau alamat server",
-  "please check your network connectivity":
-    "Silakan periksa konektivitas jaringan Anda",
-  "please enter server address, username and password":
-    "Silahkan masukkan alamat server, username dan password",
-  "fail to save organisation data": "Gagal menyimpan data organisasi",
-  "fail to load organisation data": "Gagal memuat data organisasi",
-  "fail to save entry form": "Gagal menyimpan form masuk",
-  "fail to save entry form's sections": "Gagal menyimpan bagian formulir masuk",
-  "fail to load entry form's sections": "Gagal memuat bagian formulir entri",
-  "fail to save entry form's fields": "Gagal menyimpan kolom formulir masuk",
-  "fail to load entry form's fields": "Gagal memuat kolom formulir entri",
-  "fail to save SMS commands": "Gagal menyimpan perintah SMS",
-  "fail to load SMS commands": "Gagal memuat perintah SMS",
-  "fail to save programs": "Gagal menyimpan program",
-  "fail to load programs": "Gagal memuat program",
-  "fail to save program stage sections": "Gagal menyimpan bagian tahap program",
-  "fail to load program-stage-sections": "Gagal memuat bagian tahap program",
-  "fail to save indicators": "Gagal menyimpan indikator",
-  "fail to load indicators": "Gagal memuat indikator",
-  "fail to save reports": "Gagal menyimpan laporan",
-  "fail to load reports": "Gagal memuat laporan",
-  "fail to save constants": "Gagal menyimpan konstanta",
-  "fail to load constants": "Gagal memuat konstanta",
-  "currently there is on assigned organisation unit on local storage, Please metadata on sync app":
-    "Saat ini ada unit organisasi yang ditugaskan di penyimpanan lokal, Harap metadata di aplikasi sinkronisasi",
-  "fail to load organisation unit": "Gagal memuat unit organisasi",
-  "fail to load profile information": "Gagal memuat informasi profil",
-  "fail to prepare local storage for updates":
-    "Gagal menyiapkan penyimpanan lokal untuk pembaruan",
-  "fail to download reports": "Gagal mengunduh laporan",
-  "fail to load organisation units information":
-    "Gagal memuat informasi unit organisasi",
-  "fail to load  report details": "Gagal memuat detail laporan",
-  "fail to load settings": "Gagal memuat pengaturan",
-  "fail to load available local instances":
-    "Gagal memuat contoh lokal yang tersedia",
-  "fail to load current user information":
-    "Gagal memuat informasi pengguna saat ini",
-  "settings have been updated successfully": "setting telah berhasil diupdate",
-  "fail to apply changes on  settings":
-    "Gagal menerapkan perubahan pada pengaturan",
-  "fail to load registration form": "Gagal memuat formulir pendaftaran",
-  "loading tracked entity list": "Memuat daftar entitas yang dilacak",
-  "fail to load tracked entity list":
-    "Gagal memuat daftar entitas yang dilacak",
-  "a case has not yet registered": "Kasus belum terdaftar",
-  "deleting all information related to this tracked entity instance":
-    "Menghapus semua informasi yang terkait dengan contoh entitas yang dilacak ini",
-  "tracked entity instance has been delete successfully":
-    "Contoh entitas yang dilacak telah berhasil dihapus",
-  "fail to delete all information related to this tracked entity instance":
-    "Gagal menghapus semua informasi yang terkait dengan contoh entitas yang dilacak ini",
-  "loading tracked entity": "Memuat entitas yang dilacak",
-  "fail to load tracked entity": "Gagal memuat entitas yang dilacak",
-  "loading registration fields": "Memuat bidang pendaftaran",
-  "fail to load registration fields": "Gagal memuat bidang pendaftaran"
+  "About": "Tentang",
+  "Aggregate status": "Status agregat",
+  "Event status": "Status acara",
+  "Event for tracker status": "Acara status tracker",
+  "Enrollments": "pendaftaran",
+  "System info": "Sistem Informasi",
+  "Synced": "disinkronisasikan",
+  "Not synced": "tidak disinkronkan",
+  "Discovering app information": "Menemukan informasi aplikasi",
+  "Discovering system information": "sistem informasi menemukan",
+  "Discovering data values storage status":
+    "Menemukan Data nilai Status penyimpanan",
+  "Discovering events storage status": "Menemukan peristiwa Status penyimpanan",
+  "Discovering enrollments storage status":
+    "Menemukan pendaftaran Status penyimpanan",
+  "Fail to discover user information":
+    "Gagal untuk menemukan informasi pengguna",
+  "Fail to discover system information":
+    "Gagal untuk menemukan sistem informasi",
+  "Fail to discover app information":
+    "Gagal untuk menemukan informasi aplikasi",
+  "Fail to discover data values storage status":
+    "Gagal untuk menemukan statusnya penyimpanan data nilai",
+  "Fail to discover enrollments storage status":
+    "Gagal untuk menemukan statusnya penyimpanan pendaftaran"
 }
