--- a/src/assets/i18n/vi.json
+++ b/src/assets/i18n/vi.json
@@ -1,306 +1,26 @@
 {
-  "innovation in every dimension": "Sáng tạo trong mọi khía cạnh",
-  "establishing connection to server": "Thiết lập kết nối tới máy chủ",
-  "aggregate metadata": "Tổng hợp siêu dữ liệu",
-  "Event and tracker metadata": "Siêu dữ liệu sự kiện & theo dõi",
-  "report metadata": "Báo cáo metadata",
-  "enter server address": "Nhập địa chỉ máy chủ",
-  "enter username": "Điền tên đăng nhập",
-  "enter password": "Nhập mật khẩu",
-  "login": "Đăng nhập",
-  "powered by": "Được hỗ trợ bởi",
-  "offline instances": "Trường hợp ngoại tuyến",
-  "or": "hoặc là",
-  "apps": "Ứng dụng",
-  "account": "Tài khoản",
-  "about": "Trong khoảng",
-  "synced": "Đã được đồng bộ hóa",
-  "not synced": "Chưa được đồng bộ hóa",
-  "profile": "Hồ sơ",
-  "help": "Cứu giúp",
-  "logout": "Đăng xuất",
-  "settings": "Cài đặt",
-  "app settings": "Cài đặt ứng dụng",
-  "current language": "Ngôn ngữ hiện tại",
-  "synchronization": "Đồng bộ hóa",
-  "auto sync": "Tự động đồng bộ hóa",
-  "minutes": "Biên bản",
-  "hours": "Giờ",
-  "form label": "Nhãn Mẫu",
-  "display name": "Tên hiển thị",
-  "form name": "Tên mẫu",
-  "form layout": "Giao diện Mẫu",
-  "list layout": "Liệt kê",
-  "table layout": "Bố trí bảng",
-  "data element per page": "Các yếu tố dữ liệu trên mỗi trang (tối đa)",
-  "dashboard": "bảng điều khiển",
-  "there no dashboard found": "Không tìm thấy bảng điều khiển",
-  "search dashboard by name": "Tìm kiếm trang tổng quan theo tên",
-  "dashboard list": "Danh sách bảng điều khiển",
-  "loading dashboard": "Khám phá trang tổng quan",
-  "loading visualization": "Khám phá dữ liệu trực quan",
-  "there no dashboard item found": "Không tìm thấy mục tổng quan",
-  "tracker capture": "Chụp theo dõi",
-  "sync": "Đồng bộ hóa",
-  "upload data via sms": "Tải lên dữ liệu qua SMS",
-  "upload data via internet": "Tải lên dữ liệu qua internet",
-  "import summaries": "Tóm tắt nhập khẩu",
-  "aggregate data": "Dữ liệu tổng hợp",
-  "tracked entity instances": "Trường hợp thực thể được theo dõi",
-  "tracked entity enrollments": "Đăng ký thực thể được theo dõi",
-  "events for tracker": "Sự kiện cho người theo dõi",
-  "success": "Sự thành công",
-  "failed": "Thất bại",
-  "import conflicts errors": "Nhập mâu thuẫn / lỗi",
-  "download metadata": "Tải xuống siêu dữ liệu",
-  "download data": "Tải dữ liệu",
-  "clear local data": "Xóa dữ liệu cục bộ",
-  "clear local metadata": "Xóa siêu dữ liệu địa phương",
-  "data values": "Giá trị dữ liệu",
-  "events": "Sự kiện",
-  "data entry": "Nhập dư liệu",
-  "touch to select organisation unit": "Chạm để chọn đơn vị tổ chức",
-  "touch to select entry form": "Chạm để chọn biểu mẫu nhập",
-  "touch to select period": "Chạm để chọn khoảng thời gian",
-  "data entry form selection": "Nhập Mẫu Nhập Dữ liệu",
-  "data dimension selection": "Lựa chọn thứ nguyên dữ liệu",
-  "touch to select option": "Chạm để chọn tùy chọn",
-  "period selection": "Lựa chọn thời kỳ",
-  "previous": "Trước",
-  "next": "Kế tiếp",
-  "there is no period to select": "Không có khoảng thời gian để chọn",
-  "organisation unit selection": "Lựa chọn đơn vị tổ chức",
-  "organisation unit": "Đơn vị tổ chức",
-  "form": "Hình thức",
-  "period": "Giai đoạn",
-  "enter data": "Nhập dữ liệu",
-  "entry form": "Mẫu đăng ký",
-  "available indicators": "Chỉ tiêu sẵn có",
-  "complete": "Hoàn thành",
-  "undo complete": "Hoàn tác hoàn thành",
-  "completed by": "Hoàn thành bởi",
-  "on": "trên",
-  "please wait": "Vui lòng đợi",
-  "data entry form sections": "Phần Mẫu Nhập Dữ liệu",
-  "completeness information": "Thông tin đầy đủ",
-  "full name": "Họ và tên",
-  "username": "Tên đăng nhập",
-  "e mail": "E-mail",
-  "phone number": "Số điện thoại",
-  "event capture": "Chụp sự kiện",
-  "touch to select program": "Chạm để chọn chương trình",
-  "columns": "Cột",
-  "add": "Thêm vào",
-  "event register": "Đăng ký sự kiện",
-  "visible header": "Tiêu đề Hiển thị",
-  "save": "Tiết kiệm",
-  "select all": "Chọn tất cả",
-  "deselect all": "Bỏ chọn tất cả",
-  "program": "Chương trình",
-  "program selection": "Lựa chọn chương trình",
-  "tracked entity dashboard": "Trang tổng quan theo dõi đối tượng",
-  "Registration": "Đăng ký",
-  "enrolling organisation unit": "Đơn vị tổ chức đăng ký",
-  "enrolling program": "Chương trình đăng ký",
-  "list of widgets": "Danh sách vật dụng",
-  "report": "Báo cáo",
-  "data set report": "Báo cáo bộ dữ liệu",
-  "standard report": "Báo cáo chuẩn",
-  "report name": "Tên báo cáo",
-  "report view": "Chế độ xem báo cáo",
-  "generate report": "Tạo báo cáo",
-  "help search": "Trợ giúp tìm kiếm",
-  "search help by title": "Trợ giúp tìm kiếm theo tiêu đề",
-  "system info": "Thông tin hệ thống",
-  "assigned organisation units": "Đơn vị tổ chức được giao",
-  "user information": "Thông tin người dùng",
-  "assigned roles": "Vai trò được chỉ định",
-  "assigned program": "Chương trình được chỉ định",
-  "assigned form": "Hình thức giao",
-  "aggregate status": "Trạng thái tổng hợp",
-  "event status": "Trạng thái sự kiện",
-  "event for tracker status": "Sự kiện cho trạng thái của trình theo dõi",
-  "enrollments": "Đăng ký",
-  "preparing table": "Chuẩn bị bàn",
-  "loading current user information": "Đang tải thông tin người dùng hiện tại",
-  "loading settings": "Đang tải cài đặt",
-  "loading help contents": "Tải nội dung trợ giúp",
-  "loading": "Tải ...",
-  "loading profile information": "Đang tải thông tin hồ sơ",
-  "loading user information": "Tải thông tin người dùng",
-  "loading entry form information": "Đang tải thông tin biểu mẫu nhập",
-  "loading available local instances": "Đang tải các bản địa phương có sẵn",
-  "loading indicators": "Chỉ số tải",
-  "prepare entry form": "Chuẩn bị mẫu đơn nhập học",
-  "loading data from the server": "Đang tải dữ liệu từ máy chủ",
-  "saving data from server": "Lưu dữ liệu từ máy chủ",
-  "loading current user authorities":
-    "Đang tải chính quyền người dùng hiện tại",
-  "preparing local storage": "Chuẩn bị lưu trữ cục bộ",
-  "loading assigned organisation units":
-    "Đang tải các đơn vị tổ chức được chỉ định",
-  "assigned organisation units have been loaded":
-    "Các đơn vị tổ chức được chỉ định đã được tải",
-  "assigned organisation units have been saved":
-    "Các đơn vị tổ chức được chỉ định đã được lưu",
-  "saving assigned organisation units":
-    "Tiết kiệm các đơn vị tổ chức được giao",
-  "loading entry forms": "Đang tải đơn đăng ký",
-  "entry forms have been loaded": "Các mẫu đơn đăng ký đã được tải",
-  "saving entry forms": "Lưu biểu mẫu nhập cảnh",
-  "entry form have been saved": "Mẫu đăng ký đã được lưu",
-  "loading entry form sections": "Đang nạp phần mẫu mục nhập",
-  "entry form sections have been loaded": "Mục nhập mẫu đã được tải",
-  "saving entry form sections": "Lưu mục mẫu nhập",
-  "entry form sections have been saved": "Mục nhập mẫu đã được lưu",
-  "loading entry form fields": "Đang tải các trường biểu mẫu nhập",
-  "entry form fields have been loaded": "Các trường mẫu nhập đã được tải",
-  "saving entry form fields": "Lưu các trường mẫu nhập",
-  "entry form fields have been saved": "Các trường mẫu nhập đã được lưu",
-  "loading programs": "Tải các chương trình",
-  "loading sms commands": "Đang tải lệnh SMS",
-  "sms commands have been loaded": "Lệnh SMS đã được tải",
-  "saving sms commands": "Lưu các lệnh SMS",
-  "sms commands have been saved": "Lệnh SMS đã được lưu",
-  "programs have been loaded": "Các chương trình đã được tải",
-  "saving programs": "Chương trình tiết kiệm",
-  "programs have been saved": "Các chương trình đã được cứu",
-  "loading program stage section": "Đang tải phần giai đoạn của chương trình",
-  "program stage section have been loaded":
-    "Phần giai đoạn chương trình đã được tải",
-  "saving program stage section": "Tiết kiệm phần giai đoạn chương trình",
-  "program stage section have been saved":
-    "Phần giai đoạn của chương trình đã được lưu",
-  "indicators have been loaded": "Các chỉ số đã được tải",
-  "saving sms indicators": "Chỉ tiêu tiết kiệm",
-  "indicators have been saved": "Các chỉ số đã được lưu",
-  "reports have been loaded": "Các báo cáo đã được tải",
-  "saving reports": "Lưu báo cáo",
-  "reports have been saved": "Báo cáo đã được lưu",
-  "loading constants": "Đang tải các hằng số",
-  "constants have been loaded": "Hằng số đã được nạp",
-  "saving constants": "Lưu các hằng số",
-  "constants have been saved": "Hằng số đã được lưu",
-  "loading report metadata": "Đang tải siêu dữ liệu báo cáo",
-  "loading available local data": "Đang tải dữ liệu cục bộ có sẵn",
-  "loading entry form completeness information":
-    "Đang tải thông tin đầy đủ về mẫu đơn",
-  "loading app information": "Đang tải thông tin về ứng dụng",
-  "loading system information": "Đang tải thông tin hệ thống",
-  "loading data values storage status":
-    "Đang tải trạng thái lưu trữ giá trị dữ liệu",
-  "loading events storage status": "Đang tải trạng thái lưu trữ sự kiện",
-  "loading enrollments storage status": "Đang tải trạng thái lưu trữ đăng ký",
-  "loading assigned programs": "Đang tải các chương trình được giao",
-  "loading data set report information":
-    "Đang tải thông tin báo cáo bộ dữ liệu",
-  "prepare data set report": "Chuẩn bị báo cáo bộ dữ liệu",
-  "no data to display": "Không có dữ liệu để hiển thị",
-  "there is no option to select": "Không có tùy chọn để chọn",
-  "there is no data entry form to select":
-    "Không có Biểu mẫu nhập dữ liệu để chọn",
-  "there is nothing to select": "Không có gì để chọn",
-  "there no data at the moment": "Không có dữ liệu vào lúc này",
-  "there is no program to select": "Không có chương trình để chọn",
-  "there is no report to select": "Không có báo cáo nào để chọn",
-  "there is no widget to select": "Không có tiện ích để chọn",
-  "loading reports": "Đang tải báo cáo",
-  "downloading reports from server": "Tải xuống các báo cáo từ máy chủ",
-  "prepare local storage for updates": "Chuẩn bị bộ nhớ cục bộ để cập nhật",
-  "saving reports from server": "Lưu báo cáo từ máy chủ",
-  "you are online": "Bạn đang trực tuyến",
-  "you are offline": "Bạn đang offline",
-  "fail to load user information": "Không thể tải thông tin người dùng",
-  "fail to load system information": "Không thể tải thông tin hệ thống",
-  "fail to load app information": "Không thể tải thông tin về ứng dụng",
-  "fail to load data values storage status":
-    "Không thể tải trạng thái lưu trữ giá trị dữ liệu",
-  "fail to load enrollments storage status":
-    "Không thể tải trạng thái lưu trữ đăng ký",
-  "fail to load entry form": "Không thể tải biểu mẫu nhập",
-  "there are no entry form to select": "Không có mẫu nhập để chọn",
-  "please select entry form first": "Trước tiên hãy chọn mẫu đơn dự tuyển",
-  "fail to load entry form information": "Không tải thông tin biểu mẫu nhập",
-  "fail to save data from the server": "Không lưu dữ liệu từ máy chủ",
-  "fail to load data from the server": "Không tải dữ liệu từ máy chủ",
-  "fail to prepare entry form": "Không chuẩn bị mẫu đơn nhập cảnh",
-  "fail to load available local data": "Không thể tải dữ liệu cục bộ có sẵn",
-  "fail to load entry form completeness information":
-    "Không thể tải thông tin đầy đủ của biểu mẫu nhập",
-  "there are no indicators to view": "Không có chỉ số nào để xem",
-  "fail to un complete entry form": "không hoàn thành mẫu đơn nhập học",
-  "fail to complete entry form": "Không hoàn thành mẫu đơn đăng ký",
-  "fail to load assigned programs": "Không tải các chương trình được chỉ định",
-  "there are no program to select": "Không có chương trình nào để chọn",
-  "loading program stages": "Đang tải các giai đoạn của chương trình",
-  "fail to load program stages": "Không tải các giai đoạn của chương trình",
-  "fail to prepare table for display": "Không chuẩn bị bàn để trưng bày",
-  "loading data from local storage": "Đang tải dữ liệu từ bộ nhớ cục bộ",
-  "fail to set translation": "Không thiết lập bản dịch",
-  "fail to prepare local storage": "Không chuẩn bị lưu trữ cục bộ",
-  "fail to load user authorities": "Không nạp được quyền hạn của người dùng",
-  "fail to save current user information":
-    "Không lưu thông tin người dùng hiện tại",
-  "please check server address": "Vui lòng kiểm tra địa chỉ máy chủ",
-  "you have enter wrong username or password or server address":
-    "Bạn đã nhập sai tên người dùng hoặc mật khẩu hoặc địa chỉ máy chủ",
-  "please check your network connectivity":
-    "Vui lòng kiểm tra kết nối mạng của bạn",
-  "please enter server address, username and password":
-    "Vui lòng nhập địa chỉ máy chủ, tên người dùng và mật khẩu",
-  "fail to save organisation data": "Không lưu dữ liệu tổ chức",
-  "fail to load organisation data": "Không thể tải dữ liệu tổ chức",
-  "fail to save entry form": "Không lưu mẫu nhập",
-  "fail to save entry form's sections": "Không lưu các phần của mục nhập",
-  "fail to load entry form's sections": "Không thể tải các mục của mục nhập",
-  "fail to save entry form's fields": "Không lưu các trường của mẫu nhập",
-  "fail to load entry form's fields":
-    "Không tải được các trường của biểu mẫu nhập",
-  "fail to save SMS commands": "Không lưu các lệnh SMS",
-  "fail to load SMS commands": "Không thể tải lệnh SMS",
-  "fail to save programs": "Không lưu các chương trình",
-  "fail to load programs": "Không thể tải các chương trình",
-  "fail to save program stage sections":
-    "Không lưu các phần giai đoạn của chương trình",
-  "fail to load program-stage-sections":
-    "Không thể tải phần giai đoạn chương trình",
-  "fail to save indicators": "Không lưu chỉ tiêu",
-  "fail to load indicators": "Không tải các chỉ số",
-  "fail to save reports": "Không lưu báo cáo",
-  "fail to load reports": "Không thể tải báo cáo",
-  "fail to save constants": "Không lưu các hằng số",
-  "fail to load constants": "Không tải các hằng số",
-  "currently there is on assigned organisation unit on local storage, Please metadata on sync app":
-    "Hiện tại có trên đơn vị tổ chức được chỉ định trên bộ nhớ cục bộ, Vui lòng siêu dữ liệu trên ứng dụng đồng bộ hóa",
-  "fail to load organisation unit": "Không tải đơn vị tổ chức",
-  "fail to load profile information": "Không thể tải thông tin tiểu sử",
-  "fail to prepare local storage for updates":
-    "Không chuẩn bị lưu trữ cục bộ để cập nhật",
-  "fail to download reports": "Không thể tải xuống báo cáo",
-  "fail to load organisation units information":
-    "Không thể tải thông tin đơn vị tổ chức",
-  "fail to load  report details": "Không thể tải chi tiết báo cáo",
-  "fail to load settings": "Không thể tải cài đặt",
-  "fail to load available local instances":
-    "Không thể tải các trường hợp hiện có tại địa phương",
-  "fail to load current user information":
-    "Không thể tải thông tin người dùng hiện tại",
-  "settings have been updated successfully":
-    "cài đặt đã được cập nhật thành công",
-  "fail to apply changes on  settings": "Không áp dụng thay đổi về cài đặt",
-  "fail to load registration form": "Không nạp mẫu đăng ký",
-  "loading tracked entity list": "Đang tải danh sách thực thể được theo dõi",
-  "fail to load tracked entity list":
-    "Không thể tải danh sách thực thể được theo dõi",
-  "a case has not yet registered": "Một trường hợp chưa đăng ký",
-  "deleting all information related to this tracked entity instance":
-    "Xóa tất cả thông tin liên quan đến thể hiện đối tượng được theo dõi này",
-  "tracked entity instance has been delete successfully":
-    "Ví dụ thể hiện theo dõi đã được xoá thành công",
-  "fail to delete all information related to this tracked entity instance":
-    "Không xóa tất cả thông tin liên quan đến thể hiện đối tượng được theo dõi này",
-  "loading tracked entity": "Đang tải theo dõi thực thể",
-  "fail to load tracked entity": "Không nạp được thực thể được theo dõi",
-  "loading registration fields": "Tải các trường đăng ký",
-  "fail to load registration fields": "Không tải các trường đăng ký"
+  "Aggregate status": "tình trạng tổng hợp",
+  "Event status": "tình trạng tổ chức sự kiện",
+  "Event for tracker status": "Tổ chức sự kiện cho tình trạng theo dõi",
+  "Enrollments": "tuyển sinh",
+  "System info": "Thông tin hệ thống",
+  "Synced": "đồng bộ hóa",
+  "Not synced": "không được đồng bộ hóa",
+  "Discovering app information": "Khám phá thông tin ứng dụng",
+  "Discovering system information": "Khám phá hệ thống thông tin",
+  "Discovering data values storage status":
+    "Khám phá dữ liệu đánh giá cao tình trạng lưu trữ",
+  "Discovering events storage status": "sự kiện khám phá ra tình trạng lưu trữ",
+  "Discovering enrollments storage status":
+    "Khám phá tuyển sinh tình trạng lưu trữ",
+  "Fail to discover user information":
+    "Thất bại trong việc phát hiện ra thông tin người dùng",
+  "Fail to discover system information":
+    "Thất bại trong việc khám phá thông tin hệ thống",
+  "Fail to discover app information":
+    "Thất bại trong việc khám phá thông tin ứng dụng",
+  "Fail to discover data values storage status":
+    "Thất bại trong việc phát hiện ra tình trạng giá trị dữ liệu lưu trữ",
+  "Fail to discover enrollments storage status":
+    "Thất bại trong việc khám phá tình trạng tuyển sinh lưu trữ"
 }
