--- a/src/assets/i18n/hi.json
+++ b/src/assets/i18n/hi.json
@@ -1,314 +1,22 @@
 {
-  "innovation in every dimension": "हर आयाम में अभिनव",
-  "establishing connection to server": "सर्वर से कनेक्शन स्थापित करना",
-  "aggregate metadata": "कुल मेटाडेटा",
-  "Event and tracker metadata": "ईवेंट और ट्रैकर मेटाडेटा",
-  "report metadata": "मेटाडेटा की रिपोर्ट करें",
-  "enter server address": "सर्वर पता दर्ज करें",
-  "enter username": "उपयोगकर्ता नाम दर्ज करें",
-  "enter password": "पास वर्ड दर्ज करें",
-  "login": "लॉग इन करें",
-  "powered by": "द्वारा संचालित",
-  "offline instances": "ऑफ़लाइन उदाहरण",
-  "or": "या",
-  "apps": "ऐप्स",
-  "account": "लेखा",
-  "about": "के बारे में",
-  "synced": "सिंक किया गया",
-  "not synced": "समन्वयित नहीं हुआ",
-  "profile": "प्रोफाइल",
-  "help": "मदद",
-  "logout": "लोग आउट",
-  "settings": "सेटिंग्स",
-  "app settings": "ऐप सेटिंग",
-  "current language": "वर्तमान भाषा",
-  "synchronization": "तुल्यकालन",
-  "auto sync": "स्वतः सिंक",
-  "minutes": "मिनट",
-  "hours": "घंटे",
-  "form label": "फ़ॉर्म लेबल",
-  "display name": "प्रदर्शित होने वाला नाम",
-  "form name": "फ़ार्म का नाम",
-  "form layout": "फॉर्म लेआउट",
-  "list layout": "सूची लेआउट",
-  "table layout": "टेबल लेआउट",
-  "data element per page": "प्रति पृष्ठ डेटा तत्व (अधिकतम)",
-  "dashboard": "डैशबोर्ड",
-  "there no dashboard found": "कोई डैशबोर्ड नहीं मिला है",
-  "search dashboard by name": "नाम से खोजें डैशबोर्ड",
-  "dashboard list": "डैशबोर्ड सूची",
-  "loading dashboard": "डैशबोर्ड खोजना",
-  "loading visualization": "विज़ुअलाइज़ेशन डेटा की खोज करना",
-  "there no dashboard item found": "कोई डैशबोर्ड आइटम नहीं मिले हैं",
-  "tracker capture": "ट्रैकर कैप्चर",
-  "sync": "सिंक",
-  "upload data via sms": "एसएमएस के माध्यम से डेटा अपलोड करें",
-  "upload data via internet": "इंटरनेट के माध्यम से डेटा अपलोड करें",
-  "import summaries": "आयात सारांश",
-  "aggregate data": "संपूर्ण आंकड़ा",
-  "tracked entity instances": "ट्रैक किए हुए संस्था के उदाहरण",
-  "tracked entity enrollments": "ट्रैकिंग इकाई नामांकन",
-  "events for tracker": "ट्रैकर के लिए ईवेंट",
-  "success": "सफलता",
-  "failed": "अनुत्तीर्ण होना",
-  "import conflicts errors": "संघर्षों / त्रुटियों को आयात करें",
-  "download metadata": "मेटाडेटा डाउनलोड करें",
-  "download data": "डेटा डाउनलोड करें",
-  "clear local data": "स्थानीय डेटा साफ़ करें",
-  "clear local metadata": "स्थानीय मेटाडेटा साफ़ करें",
-  "data values": "डेटा मूल्य",
-  "events": "आयोजन",
-  "data entry": "डाटा प्रविष्टि",
-  "touch to select organisation unit":
-    "संगठन यूनिट का चयन करने के लिए स्पर्श करें",
-  "touch to select entry form":
-    "प्रविष्टि फॉर्म का चयन करने के लिए स्पर्श करें",
-  "touch to select period": "अवधि का चयन करने के लिए स्पर्श करें",
-  "data entry form selection": "डेटा प्रविष्टि फॉर्म चयन",
-  "data dimension selection": "डेटा आयाम चयन",
-  "touch to select option": "विकल्प का चयन करने के लिए स्पर्श करें",
-  "period selection": "अवधि चयन",
-  "previous": "पिछला",
-  "next": "आगामी",
-  "there is no period to select": "का चयन करने के लिए कोई अवधि नहीं है",
-  "organisation unit selection": "संगठन इकाई चयन",
-  "organisation unit": "संगठन इकाई",
-  "form": "प्रपत्र",
-  "period": "अवधि",
-  "enter data": "जानकारी दर्ज करें",
-  "entry form": "प्रवेश प्रपत्र",
-  "available indicators": "उपलब्ध संकेतक",
-  "complete": "पूर्ण",
-  "undo complete": "पूर्ववत पूर्ण करें",
-  "completed by": "द्वारा पूरा किया गया",
-  "on": "पर",
-  "please wait": "कृपया प्रतीक्षा करें",
-  "data entry form sections": "डेटा प्रविष्टि फ़ॉर्म अनुभाग",
-  "completeness information": "पूर्णता जानकारी",
-  "full name": "पूरा नाम",
-  "username": "उपयोगकर्ता नाम",
-  "e mail": "ईमेल",
-  "phone number": "फ़ोन नंबर",
-  "event capture": "घटना कैप्चर",
-  "touch to select program": "प्रोग्राम को चुनने के लिए स्पर्श करें",
-  "columns": "कॉलम",
-  "add": "जोड़ना",
-  "event register": "इवेंट रजिस्टर",
-  "visible header": "दृश्यमान हेडर",
-  "save": "बचाना",
-  "select all": "सभी का चयन करे",
-  "deselect all": "सभी को अचिन्हिंत करें",
-  "program": "कार्यक्रम",
-  "program selection": "प्रोग्राम चयन",
-  "tracked entity dashboard": "ट्रैकिंग इकाई डैशबोर्ड",
-  "Registration": "पंजीकरण",
-  "enrolling organisation unit": "नामांकन संगठन इकाई",
-  "enrolling program": "नामांकन कार्यक्रम",
-  "list of widgets": "विजेट की सूची",
-  "report": "रिपोर्ट",
-  "data set report": "डेटा सेट रिपोर्ट",
-  "standard report": "मानक रिपोर्ट",
-  "report name": "रिपोर्ट नाम",
-  "report view": "रिपोर्ट देखें",
-  "generate report": "रिपोर्ट बनाओ",
-  "help search": "मदद खोज",
-  "search help by title": "शीर्षक से सहायता खोजें",
-  "system info": "व्यवस्था की सूचना",
-  "assigned organisation units": "असाइन किया गया संगठन इकाइयां",
-  "user information": "उपयोगकर्ता के लिए जानकारी",
-  "assigned roles": "असाइन किए गए भूमिकाएं",
-  "assigned program": "असाइन किए गए कार्यक्रम",
-  "assigned form": "असाइन किया गया फ़ॉर्म",
-  "aggregate status": "सकल स्थिति",
-  "event status": "घटना की स्थिति",
-  "event for tracker status": "ट्रैकर स्थिति के लिए ईवेंट",
-  "enrollments": "नामांकन",
-  "preparing table": "तालिका तैयार करना",
-  "loading current user information": "मौजूदा उपयोगकर्ता जानकारी लोड हो रही है",
-  "loading settings": "सेटिंग लोड हो रही है",
-  "loading help contents": "सहायता सामग्री लोड हो रही है",
-  "loading": "लोड हो रहा है ...",
-  "loading profile information": "प्रोफ़ाइल जानकारी लोड हो रही है",
-  "loading user information": "उपयोगकर्ता जानकारी लोड हो रही है",
-  "loading entry form information": "प्रविष्टि फॉर्म की जानकारी लोड करना",
-  "loading available local instances": "उपलब्ध स्थानीय उदाहरण लोड हो रहे हैं",
-  "loading indicators": "संकेतक लोड हो रहा है",
-  "prepare entry form": "प्रवेश फार्म तैयार करें",
-  "loading data from the server": "सर्वर से डेटा लोड करना",
-  "saving data from server": "सर्वर से डेटा सहेज रहा है",
-  "loading current user authorities":
-    "मौजूदा उपयोगकर्ता अधिकारियों को लोड करना",
-  "preparing local storage": "स्थानीय भंडारण की तैयारी",
-  "loading assigned organisation units":
-    "असाइन किए गए संगठन इकाइयों को लोड करना",
-  "assigned organisation units have been loaded":
-    "असाइन किए गए संगठन इकाइयां लोड की गई हैं",
-  "assigned organisation units have been saved":
-    "असाइन किए गए संगठन इकाइयां सहेज ली गई हैं",
-  "saving assigned organisation units": "सौंपा संगठन इकाइयां",
-  "loading entry forms": "प्रविष्टि फ़ॉर्म लोड करना",
-  "entry forms have been loaded": "प्रविष्टि रूपों को लोड किया गया है",
-  "saving entry forms": "प्रविष्टि फ़ॉर्म सहेज रहे हैं",
-  "entry form have been saved": "प्रवेश फार्म सहेज लिया गया है",
-  "loading entry form sections": "प्रवेश फार्म अनुभाग लोड करना",
-  "entry form sections have been loaded": "प्रवेश फार्म अनुभाग लोड किए गए हैं",
-  "saving entry form sections": "प्रविष्टि फ़ॉर्म अनुभागों को सहेजना",
-  "entry form sections have been saved": "प्रवेश फार्म अनुभाग सहेजे गए हैं",
-  "loading entry form fields": "प्रविष्टि फार्म फ़ील्ड लोड करना",
-  "entry form fields have been loaded": "प्रवेश फार्म फ़ील्ड लोड किए गए हैं",
-  "saving entry form fields": "प्रवेश फार्म फ़ील्ड सहेज रहे हैं",
-  "entry form fields have been saved": "प्रविष्टि फार्म फ़ील्ड सहेज ली गई हैं",
-  "loading programs": "प्रोग्राम लोड हो रहा है",
-  "loading sms commands": "एसएमएस कमांड लोड हो रहे हैं",
-  "sms commands have been loaded": "एसएमएस कमांड लोड किए गए हैं",
-  "saving sms commands": "एसएमएस आदेश सहेजे जा रहे हैं",
-  "sms commands have been saved": "एसएमएस कमांड सहेजे गए हैं",
-  "programs have been loaded": "कार्यक्रम लोड किए गए हैं",
-  "saving programs": "प्रोग्राम सहेज रहे हैं",
-  "programs have been saved": "कार्यक्रम सहेजे गए हैं",
-  "loading program stage section": "प्रोग्राम चरण खंड लोड हो रहे हैं",
-  "program stage section have been loaded":
-    "कार्यक्रम के चरण खंड लोड किए गए हैं",
-  "saving program stage section": "कार्यक्रम मंच वर्गों को सहेजना",
-  "program stage section have been saved":
-    "कार्यक्रम के चरण खंडों को बचाया गया है",
-  "indicators have been loaded": "संकेतक लोड किए गए हैं",
-  "saving sms indicators": "बचत सूचक",
-  "indicators have been saved": "संकेतक बचाए गए हैं",
-  "reports have been loaded": "रिपोर्ट लोड किए गए हैं",
-  "saving reports": "रिपोर्ट्स सहेजना",
-  "reports have been saved": "रिपोर्ट सहेज ली गई हैं",
-  "loading constants": "स्थिरांक लोड हो रहा है",
-  "constants have been loaded": "लगातार लोड किए गए हैं",
-  "saving constants": "स्थिर स्थिरांक",
-  "constants have been saved": "लगातार बचाया गया है",
-  "loading report metadata": "रिपोर्ट मेटाडेटा लोड करना",
-  "loading available local data": "उपलब्ध स्थानीय डेटा लोड हो रहा है",
-  "loading entry form completeness information":
-    "प्रविष्टि फ़ॉर्म पूर्णता जानकारी लोड करना",
-  "loading app information": "एप्लिकेशन की जानकारी लोड हो रही है",
-  "loading system information": "सिस्टम जानकारी लोड हो रही है",
-  "loading data values storage status":
-    "डेटा मूल्य संग्रहण स्थिति लोड हो रही है",
-  "loading events storage status": "ईवेंट संग्रहण स्थिति लोड हो रही है",
-  "loading enrollments storage status": "नामांकन भंडारण स्थिति लोड करना",
-  "loading assigned programs": "असाइन किए गए प्रोग्राम्स लोड करना",
-  "loading data set report information": "डेटा सेट रिपोर्ट की जानकारी लोड करना",
-  "prepare data set report": "डेटा सेट रिपोर्ट तैयार करना",
-  "no data to display": "डेटा प्रदर्शित करने के लिए उपलब्ध नहीं हैं",
-  "there is no option to select": "चयन करने के लिए कोई विकल्प नहीं है",
-  "there is no data entry form to select":
-    "चुनने के लिए कोई डेटा एंट्री फ़ॉर्म नहीं है",
-  "there is nothing to select": "चुनने के लिए कुछ भी नहीं है",
-  "there no data at the moment": "इस समय कोई डेटा नहीं है",
-  "there is no program to select": "चुनने के लिए कोई प्रोग्राम नहीं है",
-  "there is no report to select": "चुनने के लिए कोई रिपोर्ट नहीं है",
-  "there is no widget to select": "चुनने के लिए कोई विजेट नहीं है",
-  "loading reports": "रिपोर्ट लोड हो रही हैं",
-  "downloading reports from server": "सर्वर से रिपोर्ट डाउनलोड करना",
-  "prepare local storage for updates":
-    "अद्यतनों के लिए स्थानीय भंडारण तैयार करें",
-  "saving reports from server": "सर्वर से रिपोर्ट सहेज रहे हैं",
-  "you are online": "आप ऑनलाइन हैं",
-  "you are offline": "आप ऑफलाइन हैं",
-  "fail to load user information": "उपयोगकर्ता जानकारी लोड करने में विफल",
-  "fail to load system information": "सिस्टम जानकारी लोड करने में विफल",
-  "fail to load app information": "ऐप जानकारी लोड करने में विफल",
-  "fail to load data values storage status":
-    "डेटा मूल्य भंडारण स्थिति लोड करने में विफल",
-  "fail to load enrollments storage status":
-    "नामांकन भंडारण स्थिति को लोड करने में विफल",
-  "fail to load entry form": "प्रविष्टि फॉर्म लोड करने में विफल",
-  "there are no entry form to select":
-    "चुनने के लिए कोई प्रवेश प्रपत्र नहीं है",
-  "please select entry form first": "पहले प्रवेश फार्म का चयन करें",
-  "fail to load entry form information":
-    "प्रविष्टि फॉर्म जानकारी लोड करने में विफल",
-  "fail to save data from the server": "सर्वर से डेटा सहेजने में विफल",
-  "fail to load data from the server": "सर्वर से डेटा लोड करने में विफल",
-  "fail to prepare entry form": "प्रविष्टि फ़ॉर्म तैयार करने में विफल",
-  "fail to load available local data": "उपलब्ध स्थानीय डेटा लोड करने में विफल",
-  "fail to load entry form completeness information":
-    "प्रविष्टि फ़ॉर्म पूर्ण जानकारी लोड करने में विफल",
-  "there are no indicators to view": "देखने के लिए कोई संकेतक नहीं हैं",
-  "fail to un complete entry form":
-    "पूर्ण प्रविष्टि फ़ॉर्म को पूरा करने में विफल",
-  "fail to complete entry form": "प्रविष्टि फ़ॉर्म को पूरा करने में विफल",
-  "fail to load assigned programs": "असाइन किए गए प्रोग्राम लोड करने में विफल",
-  "there are no program to select": "चुनने के लिए कोई प्रोग्राम नहीं है",
-  "loading program stages": "प्रोग्राम चरण लोड हो रहे हैं",
-  "fail to load program stages": "प्रोग्राम चरण लोड करने में विफल",
-  "fail to prepare table for display":
-    "प्रदर्शन के लिए तालिका तैयार करने में विफल",
-  "loading data from local storage": "स्थानीय संग्रहण से डेटा लोड करना",
-  "fail to set translation": "अनुवाद सेट करने में विफल",
-  "fail to prepare local storage": "स्थानीय भंडारण तैयार करने में विफल",
-  "fail to load user authorities": "उपयोगकर्ता अधिकारियों को लोड करने में विफल",
-  "fail to save current user information":
-    "मौजूदा उपयोगकर्ता जानकारी को बचाने में विफल",
-  "please check server address": "कृपया सर्वर पता जांचें",
-  "you have enter wrong username or password or server address":
-    "आपने गलत उपयोगकर्ता नाम या पासवर्ड या सर्वर पता दर्ज किया है",
-  "please check your network connectivity":
-    "कृपया अपने नेटवर्क कनेक्टिविटी की जांच करें",
-  "please enter server address, username and password":
-    "कृपया सर्वर पता, उपयोगकर्ता नाम और पासवर्ड दर्ज करें",
-  "fail to save organisation data": "संगठन डेटा को बचाने में विफल",
-  "fail to load organisation data": "संगठन डेटा लोड करने में विफल",
-  "fail to save entry form": "प्रविष्टि फ़ॉर्म को बचाने में विफल",
-  "fail to save entry form's sections":
-    "प्रवेश फार्म के वर्गों को बचाने में विफल",
-  "fail to load entry form's sections":
-    "प्रवेश फार्म के वर्गों को लोड करने में विफल",
-  "fail to save entry form's fields": "प्रवेश फार्म के खेतों को बचाने में विफल",
-  "fail to load entry form's fields":
-    "प्रवेश फार्म के खेतों को लोड करने में विफल",
-  "fail to save SMS commands": "SMS आदेशों को सहेजने में विफल",
-  "fail to load SMS commands": "एसएमएस कमांड लोड करने में विफल",
-  "fail to save programs": "कार्यक्रमों को बचाने में विफल",
-  "fail to load programs": "प्रोग्राम लोड करने में विफल",
-  "fail to save program stage sections":
-    "प्रोग्राम चरण के वर्गों को बचाने में विफल",
-  "fail to load program-stage-sections":
-    "प्रोग्राम-चरण-वर्गों को लोड करने में विफल",
-  "fail to save indicators": "सूचक को बचाने में विफल",
-  "fail to load indicators": "संकेतक लोड करने में विफल",
-  "fail to save reports": "रिपोर्ट सहेजने में विफल",
-  "fail to load reports": "रिपोर्ट लोड करने में विफल",
-  "fail to save constants": "स्थिरांक को बचाने के लिए विफल",
-  "fail to load constants": "स्थिरांक लोड करने में विफल",
-  "currently there is on assigned organisation unit on local storage, Please metadata on sync app":
-    "वर्तमान में स्थानीय संग्रहण पर असाइन किया गया संगठन इकाई पर है, कृपया समन्वयन ऐप पर मेटाडेटा",
-  "fail to load organisation unit": "संगठन इकाई लोड करने में विफल",
-  "fail to load profile information": "प्रोफ़ाइल जानकारी लोड करने में विफल",
-  "fail to prepare local storage for updates":
-    "अद्यतनों के लिए स्थानीय भंडारण तैयार करने में विफल",
-  "fail to download reports": "रिपोर्ट डाउनलोड करने में विफल",
-  "fail to load organisation units information":
-    "संगठन इकाइयों की जानकारी लोड करने में विफल",
-  "fail to load  report details": "रिपोर्ट विवरण लोड करने में विफल",
-  "fail to load settings": "सेटिंग्स लोड करने में विफल",
-  "fail to load available local instances":
-    "उपलब्ध स्थानीय उदाहरणों को लोड करने में विफल",
-  "fail to load current user information":
-    "मौजूदा उपयोगकर्ता जानकारी लोड करने में विफल",
-  "settings have been updated successfully":
-    "सेटिंग्स को सफलतापूर्वक अद्यतन किया गया है",
-  "fail to apply changes on  settings":
-    "सेटिंग्स पर परिवर्तन लागू करने में विफल",
-  "fail to load registration form": "पंजीकरण फॉर्म लोड करने में विफल",
-  "loading tracked entity list": "ट्रैक की गई इकाई सूची को लोड किया जा रहा है",
-  "fail to load tracked entity list":
-    "ट्रैक की हुई इकाई सूची को लोड करने में विफल",
-  "a case has not yet registered": "एक मामला अभी तक पंजीकृत नहीं हुआ है",
-  "deleting all information related to this tracked entity instance":
-    "इस ट्रैक इकाई इकाई आवृत्ति से संबंधित सभी सूचनाओं को हटाना",
-  "tracked entity instance has been delete successfully":
-    "ट्रैक किए गए संस्था का उदाहरण सफलतापूर्वक हटा दिया गया है",
-  "fail to delete all information related to this tracked entity instance":
-    "इस ट्रैक इकाई इकाई से संबंधित सभी सूचनाओं को हटाने में विफल",
-  "loading tracked entity": "ट्रैक किए गए इकाई लोड हो रहा है",
-  "fail to load tracked entity": "ट्रैक इकाई को लोड करने में विफल",
-  "loading registration fields": "पंजीकरण फ़ील्ड लोड हो रही है",
-  "fail to load registration fields": "पंजीकरण फ़ील्ड लोड करने में विफल"
+  "Aggregate status": "सकल स्थिति",
+  "Event status": "घटना का दर्जा",
+  "Event for tracker status": "ट्रैकर की स्थिति के लिए इवेंट",
+  "Enrollments": "नामांकन",
+  "System info": "व्यवस्था की सूचना",
+  "Synced": "सिंक किया गया",
+  "Not synced": "समन्वयित नहीं",
+  "Discovering app information": "एप्लिकेशन जानकारी की खोज",
+  "Discovering system information": "खोज सिस्टम जानकारी",
+  "Discovering data values storage status": "खोज डेटा भंडारण स्थिति मान",
+  "Discovering events storage status": "की खोज की घटनाओं भंडारण स्थिति",
+  "Discovering enrollments storage status": "खोज नामांकन भंडारण स्थिति",
+  "Fail to discover user information":
+    "उपयोगकर्ता जानकारी की खोज करने में विफल",
+  "Fail to discover system information": "सिस्टम जानकारी की खोज करने में विफल",
+  "Fail to discover app information": "एप्लिकेशन जानकारी की खोज करने में विफल",
+  "Fail to discover data values storage status":
+    "डेटा मान भंडारण स्थिति पता चल जाने के लिए असफल",
+  "Fail to discover enrollments storage status":
+    "नामांकन भंडारण स्थिति पता चल जाने के लिए असफल"
 }
